Refactor controllers, add validation, move secrets to env, improve exceptions